syntax = "proto3";
package pcp;
option go_package = "pcp";
import "cpuInfo.proto";
import "memInfo.proto";
import "diskInfo.proto";
message SystemInfo{
  string OS = 1;
  string ARC = 2;
  int32 CPUNum = 3;
  string hostName = 4;
  pcp.CPUInfo CPUInfo = 6;
  pcp.MEMInfo MEMInfo = 7;
  pcp.DiskInfo DiskInfo = 8;
}



